Fix alignment of new icons in tutorial

--- a/src/client/tutorial.scss
+++ b/src/client/tutorial.scss
@@ -141,7 +141,7 @@
   font-weight: bold;
   margin-left: 1em;
 
-  i {
+  .icon {
     margin-right: 1ex;
   }
 
